use List.of and Map.of instead of guava