@@ -39,7 +39,6 @@ import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
 
 import com.google.cloud.datastore.testing.LocalDatastoreHelper;
-import com.google.common.collect.ImmutableMap;
 import com.spotify.apollo.Environment;
 import com.spotify.apollo.Response;
 import com.spotify.apollo.StatusType;
@@ -47,6 +46,7 @@ import com.spotify.styx.model.Resource;
 import com.spotify.styx.storage.AggregateStorage;
 import java.io.IOException;
 import java.time.Duration;
+import java.util.Map;
 import java.util.logging.Level;
 import okio.ByteString;
 import org.apache.hadoop.hbase.client.Connection;
@@ -138,8 +138,8 @@ public class ResourceResourceTest extends VersionedApiTest {
     assertThat(response, hasStatus(belongsToFamily(StatusType.Family.SUCCESSFUL)));
     assertJson(response, "resources", hasSize(2));
     assertJson(response, "resources", containsInAnyOrder(
-        ImmutableMap.of("id", "resource1", "concurrency", 1),
-        ImmutableMap.of("id", "resource2", "concurrency", 2)
+        Map.of("id", "resource1", "concurrency", 1),
+        Map.of("id", "resource2", "concurrency", 2)
     ));
   }
 
@@ -248,7 +248,7 @@ public class ResourceResourceTest extends VersionedApiTest {
 
     assertThat(response, hasStatus(belongsToFamily(StatusType.Family.SUCCESSFUL)));
     assertThat(storage.resource(RESOURCE_1.id()).isPresent(), is(false));
-    assertThat(storage.shardsForCounter(RESOURCE_1.id()), is(ImmutableMap.of()));
+    assertThat(storage.shardsForCounter(RESOURCE_1.id()), is(Map.of()));
   }
 
   @Test
@@ -277,8 +277,8 @@ public class ResourceResourceTest extends VersionedApiTest {
     assertThat(listResponse, hasStatus(belongsToFamily(StatusType.Family.SUCCESSFUL)));
     assertJson(listResponse, "resources", hasSize(2));
     assertJson(listResponse, "resources", containsInAnyOrder(
-        ImmutableMap.of("id", "resource1", "concurrency", 1),
-        ImmutableMap.of("id", "resource2", "concurrency", 2)
+        Map.of("id", "resource1", "concurrency", 1),
+        Map.of("id", "resource2", "concurrency", 2)
     ));
 
     // change resource2
@@ -293,8 +293,8 @@ public class ResourceResourceTest extends VersionedApiTest {
     assertThat(listResponse2, hasStatus(belongsToFamily(StatusType.Family.SUCCESSFUL)));
     assertJson(listResponse2, "resources", hasSize(2));
     assertJson(listResponse2, "resources", containsInAnyOrder(
-        ImmutableMap.of("id", "resource1", "concurrency", 1),
-        ImmutableMap.of("id", "resource2", "concurrency", 3)
+        Map.of("id", "resource1", "concurrency", 1),
+        Map.of("id", "resource2", "concurrency", 3)
     ));
     assertThat(storage.resource(RESOURCE_1.id()), hasValue(RESOURCE_1));
     assertThat(storage.resource("resource2"), hasValue(Resource.create("resource2", 3)));
@@ -312,7 +312,7 @@ public class ResourceResourceTest extends VersionedApiTest {
     assertThat(listResponse3, hasStatus(belongsToFamily(StatusType.Family.SUCCESSFUL)));
     assertJson(listResponse3, "resources", hasSize(1));
     assertJson(listResponse3, "resources", containsInAnyOrder(
-        ImmutableMap.of("id", "resource1", "concurrency", 1)
+        Map.of("id", "resource1", "concurrency", 1)
     ));
     assertThat(storage.resource(RESOURCE_1.id()), hasValue(RESOURCE_1));
     assertThat(storage.resource("resource2"), isEmpty());
